closes #2 * created classes necessary for adding music folders * created rest calls for rebuilding the library * created stub html file for viewing library

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html ng-app="EvilMusicApp">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Insert title here</title>
+	<title>Evil Music</title>
 	<script type="text/javascript">
 		var EQ_COUNT = 16;
 		var peakingNode;
@@ -107,6 +107,7 @@
 		<div>
 			<input type="button" value="Add Song And List" ng-click="addSongAndList()"/>
 			<input type="button" value="Remove All Songs" ng-click="removeAllSongs()"/>
+			<input type="button" value="Rebuild Library" ng-click="rebuildLibrary()"/>
 		</div>
 		<div>
 			<a href="music">test download file</a>
