#11 created a basic play queue.  It does not actually play yet.

--- a/src/main/webapp/library.html
+++ b/src/main/webapp/library.html
@@ -11,17 +11,46 @@
 <body ng-controller="EMLibraryController">
     <h1>Evil Music - Library</h1>
     <div>
-        <input type="button" value="remove all" ng-click="removeAllSongs()"/>
-        <input type="button" value="rebuild" ng-click="rebuildLibrary()"/>
+        <input type="button" value="clear library" ng-click="clearLibrary()"/>
+        <input type="button" value="rebuild library" ng-click="rebuildLibrary()"/>
+        <input type="button" value="clear queue" ng-click="clearQueue()"/>
     </div>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-        </tr>
-        <tr ng-repeat="info in songInfos">
-            <td>{{info.id}}</td>
-            <td>{{info.name}}</td>
-        </tr>
-    </table>
+    <div style="float:left">
+        <div><h2>Library</h2></div>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Queue</th>
+            </tr>
+            <tr ng-repeat="info in library">
+                <td>{{info.id}}</td>
+                <td>{{info.name}}</td>
+                <td><input type="button" value="enqueue last" ng-click="enqueueLast(info.id)"/></td>
+            </tr>
+        </table>
+    </div>
+    <div style="float:right">
+        <div><h2>Queue</h2></div>
+        <table>
+            <tr>
+                <th>pI</th>
+                <th>qI</th>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Controls</th>
+            </tr>
+            <tr ng-repeat="info in queue">
+                <td>{{info.playIndex}}</td>
+                <td>{{info.queueIndex}}</td>
+                <td>{{info.id}}</td>
+                <td>{{info.name}}</td>
+                <td>
+                    <input type="button" value="play" ng-click="play(info.queueIndex)"/>
+                    <input type="button" value="remove" ng-click="removeFromQueue(info.queueIndex)"/>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div style="clear:both"></div>
 </body>
