--- a/src/main/webapp/library.html
+++ b/src/main/webapp/library.html
@@ -3,11 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Evil Music - Library</title>
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/emcontroller.js"></script>
-    <script type="text/javascript" src="js/emeq.js"></script>
-    <script type="text/javascript" src="js/aurora.js"></script>
-    <script type="text/javascript" src="js/flac.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/library.css">
+    <script type="text/javascript" src="/js/angular.js"></script>
+    <script type="text/javascript" src="/js/emcontroller.js"></script>
+    <script type="text/javascript" src="/js/emeq.js"></script>
+    <script type="text/javascript" src="/js/aurora.js"></script>
+    <script type="text/javascript" src="/js/flac.js"></script>
 </head>
 <body ng-controller="EMLibraryController">
     <h1>Evil Music - Library</h1>
@@ -18,6 +19,27 @@
         <input type="button" value="play/pause" ng-click="togglePlayback()"/>
         <input type="button" value="move 10s" ng-click="moveToTime(10000)"/>
     </div>
+    <div>
+        <div><h2>EQ</h2></div>
+        <div>
+            <div class="eq-node-slider-div" ng-repeat="node in nodes">
+                <div class="centered">
+                    {{hertzToString(node.frequency)}}
+                </div>
+                <div class="centered">
+                    <input class="eq-node-slider"
+                           type="range" min="-40" max="10" step="0.1" orient="vertical"
+                           ng-model="node.gain" ng-change="updateNodeGain(node)"/>
+                </div>
+                <div class="centered">
+                    <input class="width-45"
+                           type="number" min="-10" max="10" step="0.1"
+                           ng-model="node.gain" ng-change="updateNodeGain(node)"/>
+                </div>
+            </div>
+            <div style="clear:both"></div>
+        </div>
+    </div>
     <div style="float:left">
         <div><h2>Library</h2></div>
         <table>
@@ -25,16 +47,18 @@
                 <th>ID</th>
                 <th>Artist</th>
                 <th>Album</th>
+                <th align="right">Track #</th>
                 <th>Title</th>
                 <th>Length</th>
                 <th>Sample Rate</th>
                 <th>Sample Count</th>
                 <th>Controls</th>
             </tr>
-            <tr ng-repeat="info in library">
+            <tr ng-repeat="info in library | orderBy : ['artist','trackNumber']">
                 <td>{{info.id}}</td>
                 <td>{{info.artist}}</td>
                 <td>{{info.album}}</td>
+                <td align="right">{{info.trackNumber}}</td>
                 <td>{{info.title}}</td>
                 <td>{{info.seconds}} s</td>
                 <td>{{info.sampleRate}} Hz</td>
@@ -66,4 +90,5 @@
         </table>
     </div>
     <div style="clear:both"></div>
+    <pre>{{testOutput}}</pre>
 </body>
