[#18]  * Restructured the files in the \`/src/main/webapp\` and \`/src/test/webapp\` folders.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Evil Music</title>
-    <link rel="stylesheet" type="text/css" href="/css/evilmusic.css">
-    <script type="text/javascript" src="/js/emaurora.js" defer></script>
-    <script type="text/javascript" src="/js/lib/flac.js" defer></script>
-    <script type="text/javascript" src="/js/lib/jquery.js" defer></script>
-    <script type="text/javascript" src="/js/lib/angular.js" defer></script>
-    <script type="text/javascript" src="/js/emeq.js" defer></script>
-    <script type="text/javascript" src="/js/emcontroller.js" defer></script>
-    <script type="text/javascript" src="/js/directives/emprogressbar.js" defer></script>
-    <script type="text/javascript" src="/js/directives/emvolumecontrol.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/assets/css/evilmusic.css">
+    <script type="text/javascript" src="/assets/libs/aurora.js" defer></script>
+    <script type="text/javascript" src="/assets/libs/flac.js" defer></script>
+    <script type="text/javascript" src="/assets/libs/jquery.js" defer></script>
+    <script type="text/javascript" src="/assets/libs/angular.js" defer></script>
+    <script type="text/javascript" src="/assets/js/emeq.js" defer></script>
+    <script type="text/javascript" src="/emcontroller.js" defer></script>
+    <script type="text/javascript" src="/shared/progressbar/emprogressbar.js" defer></script>
+    <script type="text/javascript" src="/shared/volumecontrol/emvolumecontrol.js" defer></script>
 </head>
 <body ng-controller="EMLibraryController">
     <h1>Evil Music</h1>
