[#11]  * Moved the client side queue management code into its own AngularJS service  * Renamed the /src/main/webapp/shared folder as /src/main/webapp/components  * Created client-side service for utility functions  * Moved the REST URL for clearing the queue from "DELETE /rest/queue/{queueID}" to "DELETE /rest/queue/{queueID}/elements"

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,10 +8,12 @@
     <script type="text/javascript" src="/assets/libs/flac.js" defer></script>
     <script type="text/javascript" src="/assets/libs/jquery.js" defer></script>
     <script type="text/javascript" src="/assets/libs/angular.js" defer></script>
-    <script type="text/javascript" src="/assets/js/emeq.js" defer></script>
+    <script type="text/javascript" src="/assets/js/emutils.js" defer></script>
     <script type="text/javascript" src="/emcontroller.js" defer></script>
-    <script type="text/javascript" src="/shared/progressbar/emprogressbar.js" defer></script>
-    <script type="text/javascript" src="/shared/volumecontrol/emvolumecontrol.js" defer></script>
+    <script type="text/javascript" src="/components/progressbar/emprogressbar.js" defer></script>
+    <script type="text/javascript" src="/components/volumecontrol/emvolumecontrol.js" defer></script>
+    <script type="text/javascript" src="/components/queue/queue.srv.js" defer></script>
+    <script type="text/javascript" src="/components/utils/emutils.srv.js" defer></script>
 </head>
 <body ng-controller="EMLibraryController">
     <h1>Evil Music</h1>
@@ -71,14 +73,14 @@
                 <td align="right">{{millisecondsToString(song.millis)}} s</td>
                 <td align="right">{{hertzToString(song.sampleRate)}}</td>
                 <td align="right">{{song.sampleCount}}</td>
-                <td align="left"><input type="button" value="qL" ng-click="enqueueLast(song.id)"/></td>
+                <td align="left"><input type="button" value="qL" ng-click="queue.addLast(song.id)"/></td>
             </tr>
         </table>
     </div>
     <div style="float:right">
         <div><h2>Queue</h2></div>
         <div>
-            <input type="button" value="clear queue" ng-click="clearQueue()"/>
+            <input type="button" value="clear queue" ng-click="queue.clear()"/>
         </div>
         <table>
             <tr>
@@ -88,14 +90,14 @@
                 <th>Title</th>
                 <th>Controls</th>
             </tr>
-            <tr ng-repeat="elem in queue.elements">
+            <tr ng-repeat="elem in queue.q.elements">
                 <td>{{elem.playIndex}}</td>
                 <td>{{elem.queueIndex}}</td>
                 <td>{{elem.song.id}}</td>
                 <td>{{elem.song.title}}</td>
                 <td>
                     <input type="button" value="play" ng-click="play(elem.queueIndex)"/>
-                    <input type="button" value="remove" ng-click="removeFromQueue(elem.queueIndex)"/>
+                    <input type="button" value="remove" ng-click="queue.remove(elem.queueIndex)"/>
                 </td>
             </tr>
         </table>
