--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,25 +15,27 @@
     <script type="text/javascript" src="/components/queue/queue.srv.js" defer></script>
     <script type="text/javascript" src="/components/queue/queue.dir.js" defer></script>
     <script type="text/javascript" src="/components/utils/emutils.srv.js" defer></script>
+    <script type="text/javascript" src="/components/eq/emeq.srv.js" defer></script>
+    <script type="text/javascript" src="/components/player/emplayer.srv.js" defer></script>
 </head>
 <body ng-controller="EMLibraryController">
     <h1>Evil Music</h1>
     <div>
         <div><h2>EQ</h2></div>
         <div>
-            <div class="eq-node-slider-div" ng-repeat="node in eq.nodes">
+            <div class="eq-node-slider-div" ng-repeat="node in eq.eq.nodes">
                 <div class="centered">
-                    {{hertzToString(node.frequency)}}
+                    {{emUtils.hertzToString(node.frequency)}}
                 </div>
                 <div class="centered">
                     <input class="eq-node-slider"
                            type="range" min="-40" max="10" step="0.1" orient="vertical"
-                           ng-model="node.gain" ng-change="updateNodeGain(node)"/>
+                           ng-model="node.gain" ng-change="eq.updateNodeGain(node)"/>
                 </div>
                 <div class="centered">
                     <input class="width-45"
                            type="number" min="-10" max="10" step="0.1"
-                           ng-model="node.gain" ng-change="updateNodeGain(node)"/>
+                           ng-model="node.gain" ng-change="eq.updateNodeGain(node)"/>
                 </div>
             </div>
             <div style="clear:both"></div>
@@ -71,8 +73,8 @@
                 <td align="left">{{song.album}}</td>
                 <td align="right">{{song.trackNumber}}</td>
                 <td align="left">{{song.title}}</td>
-                <td align="right">{{millisecondsToString(song.millis)}} s</td>
-                <td align="right">{{hertzToString(song.sampleRate)}}</td>
+                <td align="right">{{emUtils.millisecondsToString(song.millis)}} s</td>
+                <td align="right">{{emUtils.hertzToString(song.sampleRate)}}</td>
                 <td align="right">{{song.sampleCount}}</td>
                 <td align="left"><input type="button" value="qL" ng-click="queue.addLast(song.id)"/></td>
             </tr>
@@ -82,5 +84,4 @@
         <em-queue></em-queue>
     </div>
     <div style="clear:both"></div>
-    <pre>{{testOutput}}</pre>
 </body>
