--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="/assets/libs/angular.js" defer></script>
     <script type="text/javascript" src="/assets/js/emutils.js" defer></script>
     <script type="text/javascript" src="/emcontroller.js" defer></script>
-    <script type="text/javascript" src="/components/progressbar/emprogressbar.js" defer></script>
-    <script type="text/javascript" src="/components/volumecontrol/emvolumecontrol.js" defer></script>
+    <script type="text/javascript" src="/components/progressbar/emprogressbar.dir.js" defer></script>
+    <script type="text/javascript" src="/components/volumecontrol/emvolumecontrol.dir.js" defer></script>
     <script type="text/javascript" src="/components/queue/queue.srv.js" defer></script>
     <script type="text/javascript" src="/components/queue/queue.dir.js" defer></script>
     <script type="text/javascript" src="/components/utils/emutils.srv.js" defer></script>
@@ -44,10 +44,10 @@
     <div>
         <div><h2>Player Controls</h2></div>
         <div>
-            <input type="button" value="play/pause" ng-click="togglePlayback()"/>
-            <div em-volume-control style="display:inline-block" volume="volume" onvolumechange="setVolume"></div>
+            <input type="button" value="play/pause" ng-click="player.togglePlayback()"/>
+            <div em-volume-control style="display:inline-block" volume="player.volume" onvolumechange="player.setVolume"></div>
         </div>
-        <em-progress-bar progress="playerProgress" onseek="seekToPercent"></em-progress-bar>
+        <em-progress-bar progress="player.playerProgress" onseek="player.seekToPercent"></em-progress-bar>
     </div>
     <div style="float:left">
         <div><h2>Library</h2></div>
